# matvec

./: .gitignore  CMakeLists.txt  README.md  error_profile.ipynb  get_layer_outputs.ipynb  get_weights.ipynb  layer_multiplication.ipynb  manual_inference.ipynb  run_scripts_backup.ipynb  scratch.ipynb  test_mnist.ipynb  train_mnist.ipynb
src/: matvec.cu  matvec_banking.cu  matvec_banking_blcks.cu  matvec_blas  matvec_blas.cpp  matvec_cblas  matvec_cblas.cpp  matvec_cublas.cu  matvec_naive.cu  matvec_shmem.cu  matvec_shmem_blcks.cu  matvec_super_optimized.cu  matvec_xblas.cpp
